Fix gap between tabs and bottom border

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -130,7 +130,7 @@ nav ul li {
   flex-direction: row;
   padding: 0.5em 1em;
   border-radius: 0 0 1em 1em;
-  background-image: linear-gradient(45deg, transparent, hsla(200deg, 90%, 40%, 0.8));
+  background-image: linear-gradient(45deg, hsla(200deg, 90%, 40%, 0), hsla(200deg, 90%, 40%, 0.8) 75%);
   color: white;
 }
 
@@ -222,16 +222,18 @@ td.feed-url-delete {
 
 .birdfeed-tabs {
   border-bottom: 2px solid hsl(200, 70%, 50%);
+  padding: 0;
 }
 
 .birdfeed-tab {
   display: inline-block;
   border: 0;
+  margin: 0 0 -1px 0;
+  outline: 0;
   padding: 0.3em;
   color: hsl(0, 0%, 95%);
   background-color: hsl(200, 20%, 60%);
   min-width: 6em;
-  outline: 0;
   border-radius: 1em 1em 0 0;
 }
 
@@ -479,18 +481,19 @@ td.date, td.time {
   position: absolute;
   width: 1000px;
   height: 100px;
-  background-color: #02b2e1;
-  left: -100px;
+  background-color: hsl(196deg 17% 90%);
+  left: -40px;
   top: 200px;
   display: block;
   z-index: -1;
   transform: perspective(200px) rotate(45deg) rotatey(10deg) scale(4);
   overflow: hidden;
   width: 100%;
+  border: 10px solid hsl(196deg 15% 88%);
 }
 
 .thing2 {
-  background-color: orange;
+  background-color: hsl(200deg, 0%, 90%);
   transform: translateX(-300px) perspective(100px) rotate( 45deg) scale(4);
   overflow: hidden;
   width: 100%;
